592991 : sonar issue fixes